fix: bugs with map yandex api

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=b16f7abd-7a61-482d-8e6d-19ae111b728a&lang=ru_RU"
-      type="text/javascript"
-    ></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=b16f7abd-7a61-482d-8e6d-19ae111b728a&lang=ru_RU"></script>
   </head>
   <body>
     <header class="navbar">
@@ -230,7 +227,7 @@
               <button class="button booking__button">View Other Options</button>
             </div>
             <!-- /.booking -->
-            <div class="map" id="map" style="width: 347px; height: 213px"></div>
+            <div class="map" id="map"></div>
             <!-- /.map -->
           </div>
           <!-- /.hotel-right -->
